# Aimaq

./: text.md
backend/: .dockerignore  .env.example  PLAN.md  add.md  celerybeat-schedule  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/nodes/: competitor.py  explainer.py  fetcher.py  footfall.py  planner.py  scoring.py  searcher.py  transit.py  validator.py
backend/app/api/: deps.py
backend/app/api/v1/routers/: businesses.py  dashboard.py  heatmap.py  listings.py  search.py
backend/app/db/: client.py  queries.py
backend/app/integrations/: osm.py
backend/app/models/: listing.py
backend/app/scrapers/: base.py  krisha.py
backend/app/services/: llm.py  search.py
backend/app/tasks/: scraping.py
backend/scripts/: run_scraper.py
backend/supabase/migrations/: 20260319000001_create_listings.sql
backend/tests/: test_scrapers.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/auth/: layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx
frontend/src/components/: AlmatyMap.tsx  BusinessTypeSelector.tsx  ContactModal.tsx  HeatmapLayer.tsx  HeroScreen.tsx  PipelineProgress.tsx  Questionnaire.tsx  ResultsGrid.tsx  ResultsPanel.tsx  ScoreBreakdown.tsx  ScoreCard.tsx  SearchForm.tsx
frontend/src/hooks/: useDashboardData.ts  useMapSync.ts  useSearchPolling.ts
frontend/src/lib/: api.ts  dashboard-api.ts  score-utils.ts
frontend/src/store/: useLocationIQStore.ts
frontend/src/types/: dashboard.ts  index.ts  leaflet-heat.d.ts
(+33 files in other folders)
