[project]
name = "locationiq-backend"
version = "0.1.0"
description = "AI-powered commercial real estate finder for Almaty"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
